# tomo

./: .gitignore  MEMORY.md  README.md  TODO.md  gen_z_dataset.csv  package.json  pyproject.toml  simplify-dashboard-control-connections-sql-memory-read-only-schedules.md
agent-tools/: 65ad56a5-0268-4fd5-ad18-46c7ec504d32.txt  9429fb19-f1df-40c1-b176-0f7f6df33d71.txt
dashboard/: next.config.ts  package.json
desktop_ui/: components.json  index.html  package.json  tsconfig.node.json  vite.config.ts
desktop_ui/src/: app.tsx  main.tsx  styles.css
prototypes/memory-console/: automations.html  editor.html  index.html  memories.html  plugins.html  styles.css
skills/browser-tool/: SKILL.md
skills/gen-z-phrasing/: COMMON_PHRASES.md
skills/social-browser/: SKILL.md
src/butler/: agent.py  cli.py  config.py  gateway.py  model.py  oauth.py  telegram.py  token_store.py  tools.py  tui.py
src/tomo/: agent.py  browser_tools.py  cli.py  config.py  control_api.py  desktop.html  (+20 more)
terminals/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: test_agent.py  test_browser_tools.py  test_control_api.py  test_control_approval_store.py  test_control_http_adapter.py  test_control_plane.py  test_control_plane_models.py  test_cross_gateway_bridge.py  test_desktop.py  test_file_tools.py  test_gateway.py  test_langgraph_agent.py  test_memory_store.py  test_prompt_chat.py  test_reasoning.py  test_slash_commands.py  test_social_browser.py  test_speech.py  test_telegram.py  test_web_tools.py
tmp/: composer-polished.html  design-1-meadow.html  design-2-zen.html  design-3-dusk.html
(+97 files in other folders)
