[project]
name = "tomo"
version = "0.1.0"
description = "A primitive-tools project chat interface backed by SuperGrok OAuth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "langchain>=1.0.0",
    "langgraph>=1.2.4",
    "langchain-xai>=1.0.0",
    "pillow>=10.0.0",
    "prompt-toolkit>=3.0.52",
    "pyside6>=6.9.0",
    "pystray>=0.19.5",
    "pywebview>=6.2.0",
    "pydantic-settings>=2.0.0",
    "qtpy>=2.4.3",
    "rank-bm25>=0.2.2",
    "winrt-windows-foundation>=3.2.1",
    "winrt-windows-foundation-collections>=3.2.1",
    "winrt-windows-media-speechrecognition>=3.2.1",
]

[project.scripts]
tomo = "tomo.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tomo"
module-root = "src"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
